--- a/confs/arah-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/arah-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -23,8 +23,8 @@ dataset {
     train_start_frame = 0
     train_end_frame = 10
     val_subsampling_rate = 200
-    val_start_frame = 500
-    val_end_frame = -1
+    val_start_frame = 0
+    val_end_frame = 1
     test_subsampling_rate = 100
     test_start_frame = 500
     test_end_frame = -1
@@ -37,11 +37,11 @@ dataset {
     patch_size = 32
     N_patches = 2
     ray_shoot_mode = patch
-    points_sample_mode = inner # outer # outer 表示
+    inner_sampling = False
 }
 
 train {
-    gpus = [2]
+    gpus = [0]
     batch_size = 1
     num_workers = 4
 
@@ -73,7 +73,9 @@ train {
     view_input_noise = True
     pose_input_noise = True
     nv_noise_type = rotation
-    sdf_mode = hyper_net # hyper_net
+    sdf_mode = mlp # hyper_net
+    
+
 }
 
 
