--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
 .vscode
 __pycache__
+
 data
 exp
 test
-*.log
-*.out
 out
 output
-.zip
-*.pkl
-.so
 build
 dist
+
+*so
+*pkl
 *egg-info
+*log
+*out
 *obj
 *zip
