--- a/confs/arah-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/arah-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -2,7 +2,6 @@ general {
     base_exp_dir = ./exp/CoreView_377/
     recording = [./,]
     total_bones = 24
-    Z_VALS = True
 }
 
 dataset {
@@ -22,9 +21,9 @@ dataset {
     train_subsampling_rate = 1
     train_start_frame = 0
     train_end_frame = 10
-    val_subsampling_rate = 200
-    val_start_frame = 0
-    val_end_frame = 1
+    val_subsampling_rate = 100
+    val_start_frame = 500
+    val_end_frame = -1
     test_subsampling_rate = 100
     test_start_frame = 500
     test_end_frame = -1
@@ -35,18 +34,18 @@ dataset {
     backgroung_color = [0., 0., 0.]
     sample_subject_ratio = 0.8
     patch_size = 32
-    N_patches = 2
+    N_patches = 2   
     ray_shoot_mode = patch
-    inner_sampling = False
+    inner_sampling = True
 }
 
 train {
-    gpus = [0]
+    gpus = [2]
     batch_size = 1
-    num_workers = 4
+    num_workers = 16
 
     val_every_epoch = 5
-    val_every_step = 100 # 200
+    val_every_step = 200 # 200
     log_every_step = 1 # 10
 
     save_every_epoch  = 20
@@ -62,9 +61,9 @@ train {
     lr_sdf_decoder_pose_encoder = 1e-4
 
     weights {
-        rgb_weight = 10,
-        perceptual_weight = 0.01,
-        eikonal_weight = 0.01,
+        rgb_weight = 50, # 10,
+        perceptual_weight = 5, # 1,
+        eikonal_weight = 0.1, # 0.01
         mask_weight = 0,
         skinning_weight = 0,
         params_weight=200
@@ -74,8 +73,6 @@ train {
     pose_input_noise = True
     nv_noise_type = rotation
     sdf_mode = mlp # hyper_net
-    
-
 }
 
 
@@ -125,7 +122,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 0, # for pose refiner
+        kick_in_iter = 10000, # for pose refiner
     }
 
     nerf {
@@ -198,8 +195,8 @@ model {
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
         is_adasamp = True,
-        N_iter_backward = 0,
-        non_rigid_kick_in_iter = 5000,
-        pose_refine_kick_in_iter = 5000,
+        N_iter_backward = 1,
+        use_init_sdf = True,
+        sdf_threshold = 0.03
     }
 }
