--- a/confs/hfavatar-zju/ZJUMOCAP-392-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-392-mono-4gpus.conf
@@ -1,5 +1,5 @@
 general {
-    base_exp_dir = ./exp/CoreView_377/
+    base_exp_dir = ./exp/CoreView_392/
     recording = [./,]
     total_bones = 24
 }
@@ -10,22 +10,22 @@ dataset {
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [CoreView_377]
-    val_split = [CoreView_377]
-    test_split = [CoreView_377]
+    train_split = [CoreView_392]
+    val_split = [CoreView_392]
+    test_split = [CoreView_392]
     train_views = [0]
     test_views = [0]
     val_views = [0]
-    N_frames = 616
+    N_frames = 556
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 10
-    val_subsampling_rate = 100
-    val_start_frame = 500
+    train_end_frame = 10 # 450
+    val_subsampling_rate = 10
+    val_start_frame = 450
     val_end_frame = -1
-    test_subsampling_rate = 100
-    test_start_frame = 500
+    test_subsampling_rate = 10
+    test_start_frame = 450
     test_end_frame = -1
 
     box_margin = 0.05
@@ -34,18 +34,18 @@ dataset {
     backgroung_color = [0., 0., 0.]
     sample_subject_ratio = 0.8
     patch_size = 32
-    N_patches = 2   
+    N_patches = 2
     ray_shoot_mode = patch
     inner_sampling = True
+    res_level = 4
 }
 
 train {
-    gpus = [2]
+    gpus = [0,1,2,3]
     batch_size = 1
     num_workers = 16
 
     val_every_epoch = 5
-    val_every_step = 200 # 200
     log_every_step = 1 # 10
 
     save_every_epoch  = 20
@@ -65,14 +65,15 @@ train {
         perceptual_weight = 5, # 1,
         eikonal_weight = 0.1, # 0.01
         mask_weight = 0,
-        skinning_weight = 0,
-        params_weight=200
+        skinning_weight = 1,
+        params_weight = 0,
+        pose_refine_weight = 1,
     }
     rgb_loss_type = l1
     view_input_noise = True
     pose_input_noise = True
     nv_noise_type = rotation
-    sdf_mode = mlp # hyper_net
+    sdf_mode = tri # mlp # hyper_net
 }
 
 
@@ -114,7 +115,7 @@ model {
         skips = [4],
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
-        kick_in_iter = 10000,
+        kick_in_iter = 999999999999999999999,
         full_band_iter = 50000
     }
     
@@ -122,7 +123,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 10000, # for pose refiner
+        kick_in_iter = 999999999999999999999, # for pose refiner
     }
 
     nerf {
@@ -172,6 +173,32 @@ model {
         weight_norm = True
     }
 
+    triplane_network {
+        img_resolution = 512,
+        img_channels = 24,
+        rendering_kwargs {
+            box_warp = 3,
+            density_reg = 1.0,
+            PE_res = 12,
+            attention_window_size = 8,
+            attention_numheads = 2,
+            multiply_PE_res = 8,
+            is_dec_geoinit = True
+        }
+        triplane_sdf {
+            d_out = 257,
+            d_in = 288,
+            d_hidden = 256,
+            n_layers = 3
+        }
+        triplane_sdf_ini {
+            d_out = 24,
+            d_in = 3,
+            d_hidden = 256,
+            n_layers = 5
+        }
+    }
+
     variance_network {
         init_val = 0.3
     }
@@ -195,7 +222,7 @@ model {
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
         is_adasamp = True,
-        N_iter_backward = 1,
+        N_iter_backward = 0,
         use_init_sdf = True,
         sdf_threshold = 0.03
     }
