add extract infant geometry

--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -20,7 +20,7 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 10
+    train_end_frame = 500
     val_subsampling_rate = 10
     val_start_frame = 500
     val_end_frame = -1
@@ -41,9 +41,9 @@ dataset {
 }
 
 train {
-    gpus = [1]
+    gpus = [0, 1, 2, 3]
     batch_size = 1
-    num_workers = 16
+    num_workers = 4
 
     val_every_epoch = 5
     log_every_step = 1 # 10
@@ -64,7 +64,7 @@ train {
         perceptual_weight = 5, # 1,
         eikonal_weight = 0.1, # 0.01
         mask_weight = 0,
-        skinning_weight = 1,
+        skinning_weight = 0,
         params_weight = 0,
         pose_refine_weight = 1,
     }
