update inner sampling

--- a/confs/hfavatar-zju/ZJUMOCAP-387-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-387-mono-4gpus.conf
@@ -1,5 +1,5 @@
 general {
-    base_exp_dir = ./exp/CoreView_377/
+    base_exp_dir = ./exp/CoreView_387/
     recording = [./,]
     total_bones = 24
 }
@@ -10,21 +10,21 @@ dataset {
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [CoreView_377]
-    val_split = [CoreView_377]
-    test_split = [CoreView_377]
+    train_split = [CoreView_387]
+    val_split = [CoreView_387]
+    test_split = [CoreView_387]
     train_views = [0]
     test_views = [0]
     val_views = [0]
-    N_frames = 616
+    N_frames = 654
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 10
+    train_end_frame = 500
     val_subsampling_rate = 50
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 50
+    test_subsampling_rate = 10
     test_start_frame = 500
     test_end_frame = -1
 
@@ -37,16 +37,15 @@ dataset {
     N_patches = 4
     ray_shoot_mode = patch
     inner_sampling = True
-    res_level = 4
-    use_dilated = True
+    res_level = 1
 }
 
 train {
-    gpus = [2]
+    gpus = [0]
     batch_size = 1
     num_workers = 8
 
-    val_every_epoch = 2
+    val_every_epoch = 5
     log_every_step = 1 # 10
 
     save_every_epoch  = 20
@@ -73,7 +72,7 @@ train {
     view_input_noise = True
     pose_input_noise = True
     nv_noise_type = rotation
-    sdf_mode = mlp # tri # mlp # hyper_net
+    sdf_mode = tri # mlp # hyper_net
 }
 
 
@@ -123,7 +122,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 0, # for pose refiner
+        kick_in_iter = 999999999999999999999, # for pose refiner
     }
 
     nerf {
