--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
@@ -13,18 +13,18 @@ dataset {
     train_split = [CoreView_377]
     val_split = [CoreView_377]
     test_split = [CoreView_377]
-    train_views = [0]
-    test_views = [0]
-    val_views = [0]
+    train_views = [0, 6, 12, 18]
+    test_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
+    val_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
     N_frames = 616
 
-    train_subsampling_rate = 1
+    train_subsampling_rate = 5
     train_start_frame = 0
-    train_end_frame = 10
-    val_subsampling_rate = 50
+    train_end_frame = 500
+    val_subsampling_rate = 100
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 50
+    test_subsampling_rate = 100
     test_start_frame = 500
     test_end_frame = -1
 
@@ -42,7 +42,7 @@ dataset {
 }
 
 train {
-    gpus = [2]
+    gpus = [0, 1, 2, 3]
     batch_size = 1
     num_workers = 8
 
@@ -73,7 +73,7 @@ train {
     view_input_noise = True
     pose_input_noise = True
     nv_noise_type = rotation
-    sdf_mode = mlp # tri # mlp # hyper_net
+    sdf_mode = tri # mlp # hyper_net
 }
 
 
@@ -123,7 +123,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 0, # for pose refiner
+        kick_in_iter = 999999999999999999999, # for pose refiner
     }
 
     nerf {
