add pose refine

--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -20,11 +20,11 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 10
-    val_subsampling_rate = 50
+    train_end_frame = 500
+    val_subsampling_rate = 100
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 50
+    test_subsampling_rate = 100
     test_start_frame = 500
     test_end_frame = -1
 
@@ -42,7 +42,7 @@ dataset {
 }
 
 train {
-    gpus = [2]
+    gpus = [0]
     batch_size = 1
     num_workers = 8
 
@@ -65,7 +65,7 @@ train {
         perceptual_weight = 5, # 1,
         eikonal_weight = 0.1, # 0.01
         mask_weight = 0,
-        skinning_weight = 0,
+        skinning_weight = 1,
         params_weight = 0,
         pose_refine_weight = 1,
     }
@@ -73,7 +73,7 @@ train {
     view_input_noise = True
     pose_input_noise = True
     nv_noise_type = rotation
-    sdf_mode = mlp # tri # mlp # hyper_net
+    sdf_mode = tri # tri # mlp # hyper_net
 }
 
 
@@ -115,7 +115,7 @@ model {
         skips = [4],
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
-        kick_in_iter = 999999999999999999999,
+        kick_in_iter = 50000,
         full_band_iter = 50000
     }
     
