--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -20,7 +20,7 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 500
+    train_end_frame = 50
     val_subsampling_rate = 100
     val_start_frame = 500
     val_end_frame = -1
@@ -42,7 +42,7 @@ dataset {
 }
 
 train {
-    gpus = [0]
+    gpus = [2]
     batch_size = 1
     num_workers = 8
 
@@ -115,15 +115,15 @@ model {
         skips = [4],
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
-        kick_in_iter = 50000,
-        full_band_iter = 50000
+        kick_in_iter = 0,
+        full_band_iter = 250000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 0, # for pose refiner
+        kick_in_iter = 999999999999, # for pose refiner
     }
 
     nerf {
@@ -222,8 +222,8 @@ model {
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
         is_adasamp = True,
-        N_iter_backward = 0,
+        N_iter_backward = 1,
         use_init_sdf = True,
-        sdf_threshold = 0.05
+        sdf_threshold = 0.04
     }
 }
