--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
@@ -18,7 +18,7 @@ dataset {
     val_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
     N_frames = 616
 
-    train_subsampling_rate = 5
+    train_subsampling_rate = 1
     train_start_frame = 0
     train_end_frame = 500
     val_subsampling_rate = 100
@@ -115,15 +115,15 @@ model {
         skips = [4],
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
-        kick_in_iter = 999999999999999999999,
-        full_band_iter = 50000
+        kick_in_iter = 0,
+        full_band_iter = 250000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 999999999999999999999, # for pose refiner
+        kick_in_iter = 250000, # for pose refiner
     }
 
     nerf {
@@ -222,7 +222,7 @@ model {
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
         is_adasamp = True,
-        N_iter_backward = 0,
+        N_iter_backward = 1,
         use_init_sdf = True,
         sdf_threshold = 0.05
     }
