--- a/confs/hfavatar-zju/ZJUMOCAP-387-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-387-4gpus.conf
@@ -1,5 +1,5 @@
 general {
-    base_exp_dir = ./exp/CoreView_377/
+    base_exp_dir = ./exp/CoreView_387/
     recording = [./,]
     total_bones = 24
 }
@@ -10,21 +10,21 @@ dataset {
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [CoreView_377]
-    val_split = [CoreView_377]
-    test_split = [CoreView_377]
-    train_views = [0]
-    test_views = [0]
-    val_views = [0]
-    N_frames = 616
+    train_split = [CoreView_387]
+    val_split = [CoreView_387]
+    test_split = [CoreView_387]
+    train_views = [0, 6, 12, 18]
+    test_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
+    val_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
+    N_frames = 654
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 50
-    val_subsampling_rate = 100
+    train_end_frame = 500
+    val_subsampling_rate = 50
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 100
+    test_subsampling_rate = 10
     test_start_frame = 500
     test_end_frame = -1
 
@@ -36,17 +36,16 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = False
-    res_level = 4
-    use_dilated = True
+    inner_sampling = True
+    res_level = 1
 }
 
 train {
-    gpus = [3]
+    gpus = [0]
     batch_size = 1
     num_workers = 8
 
-    val_every_epoch = 2
+    val_every_epoch = 5
     log_every_step = 1 # 10
 
     save_every_epoch  = 20
@@ -61,11 +60,11 @@ train {
     lr_sdf_decoder_pose_encoder = 1e-4
 
     weights {
-        rgb_weight = 10, # 10,
-        perceptual_weight = 1, # 1,
+        rgb_weight = 50, # 10,
+        perceptual_weight = 5, # 1,
         eikonal_weight = 0.1, # 0.01
         mask_weight = 0,
-        skinning_weight = 1,
+        skinning_weight = 0,
         params_weight = 0,
         pose_refine_weight = 1,
     }
@@ -73,7 +72,7 @@ train {
     view_input_noise = True
     pose_input_noise = True
     nv_noise_type = rotation
-    sdf_mode = tri # tri # mlp # hyper_net
+    sdf_mode = tri # mlp # hyper_net
 }
 
 
@@ -115,15 +114,15 @@ model {
         skips = [4],
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
-        kick_in_iter = 0,
-        full_band_iter = 250000
+        kick_in_iter = 999999999999999999999,
+        full_band_iter = 50000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 999999999999, # for pose refiner
+        kick_in_iter = 999999999999999999999, # for pose refiner
     }
 
     nerf {
@@ -222,7 +221,7 @@ model {
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
         is_adasamp = True,
-        N_iter_backward = 1,
+        N_iter_backward = 0,
         use_init_sdf = True,
         sdf_threshold = 0.05
     }
