--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -20,7 +20,7 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 50
+    train_end_frame = 500
     val_subsampling_rate = 100
     val_start_frame = 500
     val_end_frame = -1
@@ -36,7 +36,7 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = False
+    inner_sampling = True
     res_level = 4
     use_dilated = True
 }
