--- a/tools/prepare_zju_mocap/confs_preprocess/386.yaml
+++ b/tools/prepare_zju_mocap/confs_preprocess/386.yaml
@@ -5,10 +5,13 @@ dataset:
   model_path: 'data/body_models/smpl'
   start_frame: 0
   end_frame: -1
-  ext_scale_ratio: 0.5 # use for scale the subject into an unit sphere
-  preprocess_views: [1, 5]
+  scale_ratio: 1 # use for scale the subject into an unit sphere
+  preprocess_views: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
   multi_view: True
+  use_smpl_sdf: True
+  bbox_margin: 0.05
+  volume_size: 512
 
 output:
   dir: data/data_prepared
-  name: '386'
+  name: 'CoreView_386'
