--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -20,7 +20,7 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 500
+    train_end_frame = 50
     val_subsampling_rate = 100
     val_start_frame = 500
     val_end_frame = -1
@@ -85,15 +85,7 @@ model {
     geo_pose_encoder = latent
     color_pose_encoder = latent
 
-    offset_net {
-        D = 6,
-        d_in = 3,
-        W = 128,
-        output_ch = 3, 
-        skips = [4],
-        multires = 6
-    }
-
+    # for skinning_model
     skinning_model {
         optim_skinning_net_path = data/pretrained/meta-avatar/conv-unet-plane64x3-shallow-hierarchical_CAPE_keep-aspect_stage0-meta-fwd_batch-size-4_1gpus/model_best.pt,
         d_in = 3,
@@ -102,12 +94,19 @@ model {
         n_layers = 4,
         skip_in = [],
         cond_in = [],
-        multires = 0,
+        multires = 6,
         bias = 1.0,
         geometric_init = False,
         weight_norm = True
     }
     
+    pose_refiner{
+        embedding_size = 69,
+        mlp_width = 256,
+        mlp_depth = 4,
+        kick_in_iter = 999999999999, # for pose refiner
+    }
+
     non_rigid {
         condition_code_size = 69,
         mlp_width = 128,
@@ -119,11 +118,13 @@ model {
         full_band_iter = 250000
     }
     
-    pose_refiner{
-        embedding_size = 69,
-        mlp_width = 256,
-        mlp_depth = 4,
-        kick_in_iter = 999999999999, # for pose refiner
+    offset_net {
+        D = 6,
+        d_in = 3,
+        W = 128,
+        output_ch = 3, 
+        skips = [4],
+        multires = 6
     }
 
     nerf {
@@ -222,7 +223,7 @@ model {
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
         is_adasamp = True,
-        N_iter_backward = 1,
+        N_iter_backward = 2,
         use_init_sdf = True,
         sdf_threshold = 0.05
     }
