--- a/confs/hfavatar-zju/ZJUMOCAP-387-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-387-4gpus.conf
@@ -20,12 +20,12 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 500
+    train_end_frame = 550
     val_subsampling_rate = 50
-    val_start_frame = 500
+    val_start_frame = 550
     val_end_frame = -1
     test_subsampling_rate = 10
-    test_start_frame = 500
+    test_start_frame = 550
     test_end_frame = -1
 
     box_margin = 0.05
@@ -37,11 +37,12 @@ dataset {
     N_patches = 4
     ray_shoot_mode = patch
     inner_sampling = True
-    res_level = 1
+    res_level = 4
+    use_dilated = True
 }
 
 train {
-    gpus = [0]
+    gpus = [0,1]
     batch_size = 1
     num_workers = 8
 
@@ -60,11 +61,11 @@ train {
     lr_sdf_decoder_pose_encoder = 1e-4
 
     weights {
-        rgb_weight = 50, # 10,
-        perceptual_weight = 5, # 1,
+        rgb_weight = 10, # 10,
+        perceptual_weight = 1, # 1,
         eikonal_weight = 0.1, # 0.01
         mask_weight = 0,
-        skinning_weight = 0,
+        skinning_weight = 1,
         params_weight = 0,
         pose_refine_weight = 1,
     }
@@ -114,15 +115,15 @@ model {
         skips = [4],
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
-        kick_in_iter = 999999999999999999999,
-        full_band_iter = 50000
+        kick_in_iter = 0,
+        full_band_iter = 250000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 999999999999999999999, # for pose refiner
+        kick_in_iter = 250000, # for pose refiner
     }
 
     nerf {
@@ -221,7 +222,7 @@ model {
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
         is_adasamp = True,
-        N_iter_backward = 0,
+        N_iter_backward = 2,
         use_init_sdf = True,
         sdf_threshold = 0.05
     }
