--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -42,7 +42,7 @@ dataset {
 }
 
 train {
-    gpus = [3]
+    gpus = [1]
     batch_size = 1
     num_workers = 8
 
@@ -63,7 +63,7 @@ train {
     weights {
         rgb_weight = 10, # 10,
         perceptual_weight = 1, # 1,
-        eikonal_weight = 0.1, # 0.01
+        eikonal_weight = 0.1, # 0.1
         mask_weight = 0,
         skinning_weight = 1,
         params_weight = 0,
@@ -73,11 +73,22 @@ train {
     view_input_noise = True
     pose_input_noise = True
     nv_noise_type = rotation
-    sdf_mode = tri # tri # mlp # hyper_net
 }
 
 
 model {
+    # [0] for mlp sdf
+    # [1] for tri-plane sdf
+    # [2] for hyper_net sdf
+    sdf_mode = 1
+    # [0] knn, knn for points weight, and points offset for non-rigid
+    # [1] nn, skinning model to predict points weights
+    deform_mode = 1
+    N_iter_backward = 1
+    use_init_sdf = False
+    sdf_threshold = 0.05
+    init_weight = False
+    
     cano_view_dirs = False
     near_surface_samples = 16
     far_surface_samples = 16
@@ -222,9 +233,6 @@ model {
         n_outside = 0,
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
-        is_adasamp = True,
-        N_iter_backward = 2,
-        use_init_sdf = True,
-        sdf_threshold = 0.05
+        is_adasamp = True
     }
 }
