--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
@@ -42,7 +42,7 @@ dataset {
 }
 
 train {
-    gpus = [0, 1, 2, 3]
+    gpus = [0,1]
     batch_size = 1
     num_workers = 8
 
@@ -63,7 +63,7 @@ train {
     weights {
         rgb_weight = 10, # 10,
         perceptual_weight = 1, # 1,
-        eikonal_weight = 0.1, # 0.01
+        eikonal_weight = 0.1, # 0.1
         mask_weight = 0,
         skinning_weight = 1,
         params_weight = 0,
@@ -73,11 +73,22 @@ train {
     view_input_noise = True
     pose_input_noise = True
     nv_noise_type = rotation
-    sdf_mode = tri # mlp # hyper_net
 }
 
 
 model {
+    # [0] for mlp sdf
+    # [1] for tri-plane sdf
+    # [2] for hyper_net sdf
+    sdf_mode = 1
+    # [0] knn, knn for points weight, and points offset for non-rigid
+    # [1] nn, skinning model to predict points weights
+    deform_mode = 1
+    N_iter_backward = 1
+    use_init_sdf = True
+    sdf_threshold = 0.05
+    init_weight = False
+    
     cano_view_dirs = False
     near_surface_samples = 16
     far_surface_samples = 16
@@ -85,15 +96,7 @@ model {
     geo_pose_encoder = latent
     color_pose_encoder = latent
 
-    offset_net {
-        D = 6,
-        d_in = 3,
-        W = 128,
-        output_ch = 3, 
-        skips = [4],
-        multires = 6
-    }
-
+    # for skinning_model
     skinning_model {
         optim_skinning_net_path = data/pretrained/meta-avatar/conv-unet-plane64x3-shallow-hierarchical_CAPE_keep-aspect_stage0-meta-fwd_batch-size-4_1gpus/model_best.pt,
         d_in = 3,
@@ -102,12 +105,19 @@ model {
         n_layers = 4,
         skip_in = [],
         cond_in = [],
-        multires = 0,
+        multires = 6,
         bias = 1.0,
         geometric_init = False,
         weight_norm = True
     }
     
+    pose_refiner{
+        embedding_size = 69,
+        mlp_width = 256,
+        mlp_depth = 4,
+        kick_in_iter = 999999999999, # for pose refiner
+    }
+
     non_rigid {
         condition_code_size = 69,
         mlp_width = 128,
@@ -116,14 +126,16 @@ model {
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
         kick_in_iter = 0,
-        full_band_iter = 250000
+        full_band_iter = 300000
     }
     
-    pose_refiner{
-        embedding_size = 69,
-        mlp_width = 256,
-        mlp_depth = 4,
-        kick_in_iter = 250000, # for pose refiner
+    offset_net {
+        D = 6,
+        d_in = 3,
+        W = 128,
+        output_ch = 3, 
+        skips = [4],
+        multires = 6
     }
 
     nerf {
@@ -221,9 +233,6 @@ model {
         n_outside = 0,
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
-        is_adasamp = True,
-        N_iter_backward = 2,
-        use_init_sdf = True,
-        sdf_threshold = 0.05
+        is_adasamp = True
     }
 }
