--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -42,7 +42,7 @@ dataset {
 }
 
 train {
-    gpus = [1]
+    gpus = [2]
     batch_size = 1
     num_workers = 8
 
@@ -84,17 +84,17 @@ model {
     # [0] knn, knn for points weight, and points offset for non-rigid
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
-    N_iter_backward = 1
-    use_init_sdf = False
+    N_iter_backward = 2
+    use_init_sdf = True
     sdf_threshold = 0.05
     init_weight = False
-    
-    cano_view_dirs = False
-    near_surface_samples = 16
-    far_surface_samples = 16
     nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
-    geo_pose_encoder = latent
-    color_pose_encoder = latent
+
+    # cano_view_dirs = False
+    # near_surface_samples = 16
+    # far_surface_samples = 16
+    # geo_pose_encoder = latent
+    # color_pose_encoder = latent
 
     # for skinning_model
     skinning_model {
