--- a/confs/hfavatar-zju/ZJUMOCAP-386-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-386-4gpus.conf
@@ -16,15 +16,15 @@ dataset {
     train_views = [0, 6, 12, 18]
     test_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
     val_views = [1, 2, 3, 4, 5, 7, 8, 9, 10, 11, 13, 14, 15, 16, 17, 19, 20, 21, 22]
-    N_frames = 654
+    N_frames = 616
 
     train_subsampling_rate = 1
     train_start_frame = 0
     train_end_frame = 500
-    val_subsampling_rate = 50
+    val_subsampling_rate = 100
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 10
+    test_subsampling_rate = 100
     test_start_frame = 500
     test_end_frame = -1
 
@@ -37,15 +37,16 @@ dataset {
     N_patches = 4
     ray_shoot_mode = patch
     inner_sampling = True
-    res_level = 1
+    res_level = 4
+    use_dilated = True
 }
 
 train {
-    gpus = [0]
+    gpus = [0,1,2,3]
     batch_size = 1
     num_workers = 8
 
-    val_every_epoch = 5
+    val_every_epoch = 2
     log_every_step = 1 # 10
 
     save_every_epoch  = 20
@@ -60,11 +61,11 @@ train {
     lr_sdf_decoder_pose_encoder = 1e-4
 
     weights {
-        rgb_weight = 50, # 10,
-        perceptual_weight = 5, # 1,
-        eikonal_weight = 0.1, # 0.01
+        rgb_weight = 10, # 10,
+        perceptual_weight = 1, # 1,
+        eikonal_weight = 0.1, # 0.1
         mask_weight = 0,
-        skinning_weight = 0,
+        skinning_weight = 1,
         params_weight = 0,
         pose_refine_weight = 1,
     }
@@ -72,27 +73,30 @@ train {
     view_input_noise = True
     pose_input_noise = True
     nv_noise_type = rotation
-    sdf_mode = tri # mlp # hyper_net
 }
 
 
 model {
+    # [0] for mlp sdf
+    # [1] for tri-plane sdf
+    # [2] for hyper_net sdf
+    sdf_mode = 1
+    # [0] knn, knn for points weight, and points offset for non-rigid
+    # [1] nn, skinning model to predict points weights
+    deform_mode = 0
+    N_iter_backward = 1
+    use_init_sdf = False
+    sdf_threshold = 0.05
+    init_weight = False
+    
     cano_view_dirs = False
     near_surface_samples = 16
     far_surface_samples = 16
-    nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
+    nets_path = data/pretrained/humannerf/zju_mocap/386/latest.tar
     geo_pose_encoder = latent
     color_pose_encoder = latent
 
-    offset_net {
-        D = 6,
-        d_in = 3,
-        W = 128,
-        output_ch = 3, 
-        skips = [4],
-        multires = 6
-    }
-
+    # for skinning_model
     skinning_model {
         optim_skinning_net_path = data/pretrained/meta-avatar/conv-unet-plane64x3-shallow-hierarchical_CAPE_keep-aspect_stage0-meta-fwd_batch-size-4_1gpus/model_best.pt,
         d_in = 3,
@@ -101,12 +105,19 @@ model {
         n_layers = 4,
         skip_in = [],
         cond_in = [],
-        multires = 0,
+        multires = 6,
         bias = 1.0,
         geometric_init = False,
         weight_norm = True
     }
     
+    pose_refiner{
+        embedding_size = 69,
+        mlp_width = 256,
+        mlp_depth = 4,
+        kick_in_iter = 999999999999, # for pose refiner
+    }
+
     non_rigid {
         condition_code_size = 69,
         mlp_width = 128,
@@ -114,15 +125,17 @@ model {
         skips = [4],
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
-        kick_in_iter = 999999999999999999999,
-        full_band_iter = 50000
+        kick_in_iter = 0,
+        full_band_iter = 250000
     }
     
-    pose_refiner{
-        embedding_size = 69,
-        mlp_width = 256,
-        mlp_depth = 4,
-        kick_in_iter = 999999999999999999999, # for pose refiner
+    offset_net {
+        D = 6,
+        d_in = 3,
+        W = 128,
+        output_ch = 3, 
+        skips = [4],
+        multires = 6
     }
 
     nerf {
@@ -220,9 +233,6 @@ model {
         n_outside = 0,
         up_sample_steps = 4,     # 1 for simple coarse-to-fine sampling
         perturb = 1.0,
-        is_adasamp = True,
-        N_iter_backward = 0,
-        use_init_sdf = True,
-        sdf_threshold = 0.05
+        is_adasamp = True
     }
 }
