--- a/confs/hfavatar-zju/377-debug.conf
+++ b/confs/hfavatar-zju/377-debug.conf
@@ -13,8 +13,8 @@ dataset {
     train_split = [CoreView_377]
     val_split = [CoreView_377]
     test_split = [CoreView_377]
-    train_views = [0]
-    test_views = [0]
+    train_views = [7]
+    test_views = [7]
     val_views = [7]
     N_frames = 616
 
@@ -61,8 +61,8 @@ train {
     lr_sdf_decoder_pose_encoder = 1e-4
 
     weights {
-        rgb_weight = 10, # 10,
-        perceptual_weight = 1, # 1,
+        rgb_weight = 50, # 10,
+        perceptual_weight = 5, # 1,
         eikonal_weight = 0.1, # 0.1
         mask_weight = 0,
         skinning_weight = 1,
@@ -83,11 +83,10 @@ model {
     sdf_mode = 1
     # [0] knn, knn for points weight, and points offset for non-rigid
     # [1] nn, skinning model to predict points weights
-    deform_mode = 1
+    deform_mode = 0
     N_iter_backward = 2
     use_init_sdf = True
     sdf_threshold = 0.05
-
     init_weight = False
     nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
 
@@ -108,7 +107,7 @@ model {
         cond_in = [],
         multires = 6,
         bias = 1.0,
-        geometric_init = False,
+        geometric_init = false,
         weight_norm = True
     }
     
