--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
@@ -42,7 +42,7 @@ dataset {
 }
 
 train {
-    gpus = [0,1]
+    gpus = [0,1,2,3]
     batch_size = 1
     num_workers = 8
 
@@ -63,7 +63,7 @@ train {
     weights {
         rgb_weight = 10, # 10,
         perceptual_weight = 1, # 1,
-        eikonal_weight = 0.1, # 0.1
+        eikonal_weight = 0.1, # 0.11
         mask_weight = 0,
         skinning_weight = 1,
         params_weight = 0,
@@ -84,17 +84,17 @@ model {
     # [0] knn, knn for points weight, and points offset for non-rigid
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
-    N_iter_backward = 1
+    N_iter_backward = 2
     use_init_sdf = True
     sdf_threshold = 0.05
     init_weight = False
     
-    cano_view_dirs = False
-    near_surface_samples = 16
-    far_surface_samples = 16
-    nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
-    geo_pose_encoder = latent
-    color_pose_encoder = latent
+    # cano_view_dirs = False
+    # near_surface_samples = 16
+    # far_surface_samples = 16
+    # nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
+    # geo_pose_encoder = latent
+    # color_pose_encoder = latent
 
     # for skinning_model
     skinning_model {
@@ -107,7 +107,7 @@ model {
         cond_in = [],
         multires = 6,
         bias = 1.0,
-        geometric_init = False,
+        geometric_init = True,
         weight_norm = True
     }
     
@@ -125,8 +125,8 @@ model {
         skips = [4],
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
-        kick_in_iter = 0,
-        full_band_iter = 300000
+        kick_in_iter = 10000,
+        full_band_iter = 50000
     }
     
     offset_net {
