--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -20,11 +20,11 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 10
-    val_subsampling_rate = 10
+    train_end_frame = 500
+    val_subsampling_rate = 50
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 10
+    test_subsampling_rate = 50
     test_start_frame = 500
     test_end_frame = -1
 
@@ -37,6 +37,7 @@ dataset {
     N_patches = 4
     ray_shoot_mode = patch
     inner_sampling = True
+    use_inter_mask = True
     res_level = 4
     use_dilated = True
 }
@@ -84,6 +85,7 @@ model {
     # [0] knn, knn for points weight, and points offset for non-rigid
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
+
     N_iter_backward = 2
     use_init_sdf = True
     sdf_threshold = 0.05
