--- a/confs/hfavatar-zju/debug-377.conf
+++ b/confs/hfavatar-zju/debug-377.conf
@@ -13,18 +13,18 @@ dataset {
     train_split = [CoreView_377]
     val_split = [CoreView_377]
     test_split = [CoreView_377]
-    train_views = [7]
-    test_views = [7]
+    train_views = [0]
+    test_views = [0]
     val_views = [7]
     N_frames = 616
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 10
-    val_subsampling_rate = 10
+    train_end_frame = 1
+    val_subsampling_rate = 1000
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 10
+    test_subsampling_rate = 1000
     test_start_frame = 500
     test_end_frame = -1
 
@@ -36,8 +36,8 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = True
-    use_inter_mask = True
+    inner_sampling = True # False
+    use_inter_mask = True # False
     res_level = 4
     use_dilated = True
 }
@@ -48,28 +48,31 @@ train {
     num_workers = 8
 
     val_every_epoch = 2
-    log_every_step = 1 # 10
+    log_every_step = 1
 
     save_every_epoch  = 20
     max_epochs = 500
     anneal_end = 50000
     warm_up_end = 5000
 
-    lr = 5e-4
-    lr_skinning_model = 1e-4
+    lr = 1e-5
+    lr_skinning_model = 1e-5
     lr_non_rigid_mlp = 5e-5
     lr_sdf_decoder_net = 1e-6
     lr_sdf_decoder_pose_encoder = 1e-4
 
     weights {
         rgb_weight = 50, # 10,
-        perceptual_weight = 5, # 1,
+        perceptual_weight = 1, # 1,
+        mse_weight = 0.1,
+        nssim_weight = 0.1,
         eikonal_weight = 0.1, # 0.1
-        mask_weight = 0,
         skinning_weight = 1,
-        params_weight = 0,
         pose_refine_weight = 1,
+        params_weight = 0,
+        mask_weight = 0,
     }
+    weight_decay_end = 1e10,
     rgb_loss_type = l1
     view_input_noise = True
     pose_input_noise = True
@@ -84,10 +87,12 @@ model {
     sdf_mode = 1
     # [0] knn, knn for points weight, and points offset for non-rigid
     # [1] nn, skinning model to predict points weights
-    deform_mode = 0
-    N_iter_backward = 2
+    deform_mode = 1
+
+    N_iter_backward = 1
     use_init_sdf = True
     sdf_threshold = 0.05
+
     init_weight = False
     nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
 
@@ -108,7 +113,7 @@ model {
         cond_in = [],
         multires = 6,
         bias = 1.0,
-        geometric_init = false,
+        geometric_init = False,
         weight_norm = True
     }
     
@@ -116,7 +121,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 999999999999, # for pose refiner
+        kick_in_iter = 999999999, # for pose refiner
     }
 
     non_rigid {
