--- a/confs/hfavatar-zju/test-377.conf
+++ b/confs/hfavatar-zju/test-377.conf
@@ -13,8 +13,8 @@ dataset {
     train_split = [CoreView_377]
     val_split = [CoreView_377]
     test_split = [CoreView_377]
-    train_views = [7]
-    test_views = [7]
+    train_views = [0]
+    test_views = [0]
     val_views = [7]
     N_frames = 616
 
@@ -36,19 +36,19 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = True
-    use_inter_mask = True
+    inner_sampling = True # False
+    use_inter_mask = True # False
     res_level = 4
     use_dilated = True
 }
 
 train {
-    gpus = [3]
+    gpus = [1]
     batch_size = 1
     num_workers = 8
 
     val_every_epoch = 2
-    log_every_step = 1 # 10
+    log_every_step = 1
 
     save_every_epoch  = 20
     max_epochs = 500
@@ -62,14 +62,17 @@ train {
     lr_sdf_decoder_pose_encoder = 1e-4
 
     weights {
-        rgb_weight = 50, # 10,
-        perceptual_weight = 5, # 1,
+        rgb_weight = 10, # 10,
+        perceptual_weight = 1, # 1,
+        mse_weight = 0.01,
+        nssim_weight = 0.01,
         eikonal_weight = 0.1, # 0.1
-        mask_weight = 0,
-        skinning_weight = 1,
+        skinning_weight = 0.1,
+        pose_refine_weight = 0.1,
         params_weight = 0,
-        pose_refine_weight = 1,
+        mask_weight = 0,
     }
+    weight_decay_end = 50000,
     rgb_loss_type = l1
     view_input_noise = True
     pose_input_noise = True
@@ -84,10 +87,12 @@ model {
     sdf_mode = 1
     # [0] knn, knn for points weight, and points offset for non-rigid
     # [1] nn, skinning model to predict points weights
-    deform_mode = 0
+    deform_mode = 1
+
     N_iter_backward = 2
     use_init_sdf = True
     sdf_threshold = 0.05
+
     init_weight = False
     nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
 
@@ -108,7 +113,7 @@ model {
         cond_in = [],
         multires = 6,
         bias = 1.0,
-        geometric_init = false,
+        geometric_init = False,
         weight_norm = True
     }
     
