--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
@@ -36,7 +36,8 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = True
+    inner_sampling = True # False
+    use_inter_mask = True # False
     res_level = 4
     use_dilated = True
 }
@@ -47,9 +48,9 @@ train {
     num_workers = 8
 
     val_every_epoch = 2
-    log_every_step = 1 # 10
+    log_every_step = 1
 
-    save_every_epoch  = 20
+    save_every_epoch  = 10
     max_epochs = 500
     anneal_end = 50000
     warm_up_end = 5000
@@ -63,12 +64,15 @@ train {
     weights {
         rgb_weight = 10, # 10,
         perceptual_weight = 1, # 1,
-        eikonal_weight = 0.1, # 0.11
-        mask_weight = 0,
+        mse_weight = 0.01,
+        nssim_weight = 0.01,
+        eikonal_weight = 0.1, # 0.1
         skinning_weight = 1,
-        params_weight = 0,
         pose_refine_weight = 1,
+        params_weight = 0,
+        mask_weight = 0,
     }
+    weight_decay_end = 1e10,
     rgb_loss_type = l1
     view_input_noise = True
     pose_input_noise = True
@@ -84,15 +88,17 @@ model {
     # [0] knn, knn for points weight, and points offset for non-rigid
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
+
     N_iter_backward = 2
     use_init_sdf = True
     sdf_threshold = 0.05
+
     init_weight = False
+    nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
     
     # cano_view_dirs = False
     # near_surface_samples = 16
     # far_surface_samples = 16
-    # nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
     # geo_pose_encoder = latent
     # color_pose_encoder = latent
 
@@ -107,7 +113,7 @@ model {
         cond_in = [],
         multires = 6,
         bias = 1.0,
-        geometric_init = True,
+        geometric_init = False,
         weight_norm = True
     }
     
@@ -115,7 +121,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 999999999999, # for pose refiner
+        kick_in_iter = 1e10, # for pose refiner
     }
 
     non_rigid {
@@ -125,8 +131,8 @@ model {
         skips = [4],
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
-        kick_in_iter = 10000,
-        full_band_iter = 50000
+        kick_in_iter = 0,
+        full_band_iter = 500000
     }
     
     offset_net {
