--- a/confs/hfavatar-zju/debug-377.conf
+++ b/confs/hfavatar-zju/debug-377.conf
@@ -50,7 +50,7 @@ train {
     val_every_epoch = 2
     log_every_step = 1
 
-    save_every_epoch  = 20
+    save_every_epoch  = 10
     max_epochs = 500
     anneal_end = 50000
     warm_up_end = 5000
@@ -64,8 +64,8 @@ train {
     weights {
         rgb_weight = 50, # 10,
         perceptual_weight = 1, # 1,
-        mse_weight = 0.1,
-        nssim_weight = 0.1,
+        mse_weight = 0.01,
+        nssim_weight = 0.01,
         eikonal_weight = 0.1, # 0.1
         skinning_weight = 1,
         pose_refine_weight = 1,
@@ -121,7 +121,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 999999999, # for pose refiner
+        kick_in_iter = 1e10, # for pose refiner
     }
 
     non_rigid {
@@ -132,7 +132,7 @@ model {
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
         kick_in_iter = 0,
-        full_band_iter = 250000
+        full_band_iter = 500000
     }
     
     offset_net {
