--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -21,10 +21,10 @@ dataset {
     train_subsampling_rate = 1
     train_start_frame = 0
     train_end_frame = 500
-    val_subsampling_rate = 50
+    val_subsampling_rate = 100
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 50
+    test_subsampling_rate = 100
     test_start_frame = 500
     test_end_frame = -1
 
@@ -36,40 +36,43 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = True
-    use_inter_mask = True
+    inner_sampling = True # False
+    use_inter_mask = True # False
     res_level = 4
     use_dilated = True
 }
 
 train {
-    gpus = [2]
+    gpus = [0,1,2,3]
     batch_size = 1
     num_workers = 8
 
     val_every_epoch = 2
-    log_every_step = 1 # 10
+    log_every_step = 1
 
-    save_every_epoch  = 20
+    save_every_epoch  = 10
     max_epochs = 500
     anneal_end = 50000
     warm_up_end = 5000
 
-    lr = 5e-4
-    lr_skinning_model = 1e-4
+    lr = 1e-5
+    lr_skinning_model = 1e-5
     lr_non_rigid_mlp = 5e-5
     lr_sdf_decoder_net = 1e-6
     lr_sdf_decoder_pose_encoder = 1e-4
 
     weights {
-        rgb_weight = 10, # 10,
+        rgb_weight = 50, # 10,
         perceptual_weight = 1, # 1,
+        mse_weight = 0.01,
+        nssim_weight = 0.01,
         eikonal_weight = 0.1, # 0.1
-        mask_weight = 0,
         skinning_weight = 1,
-        params_weight = 0,
         pose_refine_weight = 1,
+        params_weight = 0,
+        mask_weight = 0,
     }
+    weight_decay_end = 1e10,
     rgb_loss_type = l1
     view_input_noise = True
     pose_input_noise = True
@@ -86,13 +89,13 @@ model {
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
 
-    N_iter_backward = 2
+    N_iter_backward = 1
     use_init_sdf = True
     sdf_threshold = 0.05
 
     init_weight = False
     nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
-
+    
     # cano_view_dirs = False
     # near_surface_samples = 16
     # far_surface_samples = 16
@@ -118,7 +121,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 999999999999, # for pose refiner
+        kick_in_iter = 1e10, # for pose refiner
     }
 
     non_rigid {
@@ -129,7 +132,7 @@ model {
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
         kick_in_iter = 0,
-        full_band_iter = 250000
+        full_band_iter = 500000
     }
     
     offset_net {
