--- a/confs/hfavatar-zju/test-377.conf
+++ b/confs/hfavatar-zju/test-377.conf
@@ -20,11 +20,11 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 10
-    val_subsampling_rate = 10
+    train_end_frame = 50
+    val_subsampling_rate = 1000
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 10
+    test_subsampling_rate = 1000
     test_start_frame = 500
     test_end_frame = -1
 
@@ -43,14 +43,14 @@ dataset {
 }
 
 train {
-    gpus = [1]
+    gpus = [3]
     batch_size = 1
     num_workers = 8
 
     val_every_epoch = 2
     log_every_step = 1
 
-    save_every_epoch  = 20
+    save_every_epoch  = 10
     max_epochs = 500
     anneal_end = 50000
     warm_up_end = 5000
@@ -67,12 +67,12 @@ train {
         mse_weight = 0.01,
         nssim_weight = 0.01,
         eikonal_weight = 0.1, # 0.1
-        skinning_weight = 0.1,
-        pose_refine_weight = 0.1,
+        skinning_weight = 1,
+        pose_refine_weight = 1,
         params_weight = 0,
         mask_weight = 0,
     }
-    weight_decay_end = 50000,
+    weight_decay_end = 1e10,
     rgb_loss_type = l1
     view_input_noise = True
     pose_input_noise = True
@@ -89,7 +89,7 @@ model {
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
 
-    N_iter_backward = 2
+    N_iter_backward = 1
     use_init_sdf = True
     sdf_threshold = 0.05
 
@@ -121,7 +121,7 @@ model {
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 999999999999, # for pose refiner
+        kick_in_iter = 1e10, # for pose refiner
     }
 
     non_rigid {
@@ -132,7 +132,7 @@ model {
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
         kick_in_iter = 0,
-        full_band_iter = 250000
+        full_band_iter = 500000
     }
     
     offset_net {
