add pose refine

--- a/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-mono-4gpus.conf
@@ -20,7 +20,7 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 500
+    train_end_frame = 50
     val_subsampling_rate = 100
     val_start_frame = 500
     val_end_frame = -1
@@ -43,7 +43,7 @@ dataset {
 }
 
 train {
-    gpus = [0,1,2,3]
+    gpus = [3]
     batch_size = 1
     num_workers = 8
 
@@ -55,20 +55,21 @@ train {
     anneal_end = 50000
     warm_up_end = 5000
 
-    lr = 1e-5
-    lr_skinning_model = 1e-5
+    lr = 5e-4
+    lr_pose_decoder = 5e-5
+    lr_skinning_model = 1e-4
     lr_non_rigid_mlp = 5e-5
     lr_sdf_decoder_net = 1e-6
     lr_sdf_decoder_pose_encoder = 1e-4
 
     weights {
-        rgb_weight = 50, # 10,
+        rgb_weight = 10, # 10,
         perceptual_weight = 1, # 1,
         mse_weight = 0.01,
         nssim_weight = 0.01,
         eikonal_weight = 0.1, # 0.1
         skinning_weight = 1,
-        pose_refine_weight = 1,
+        pose_refine_weight = 0,
         params_weight = 0,
         mask_weight = 0,
     }
@@ -89,7 +90,7 @@ model {
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
 
-    N_iter_backward = 1
+    N_iter_backward = 3
     use_init_sdf = True
     sdf_threshold = 0.05
 
@@ -114,14 +115,15 @@ model {
         multires = 6,
         bias = 1.0,
         geometric_init = False,
-        weight_norm = True
+        weight_norm = True,
+        kick_out_iter = 50000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 1e10, # for pose refiner
+        kick_in_iter = 60000, # for pose refiner
     }
 
     non_rigid {
