--- a/confs/hfavatar-zju/debug.conf
+++ b/confs/hfavatar-zju/debug.conf
@@ -1,5 +1,5 @@
 general {
-    base_exp_dir = ./exp/CoreView_386/
+    base_exp_dir = ./exp/CoreView_377/
     recording = [./,]
     total_bones = 24
 }
@@ -10,21 +10,21 @@ dataset {
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [CoreView_386]
-    val_split = [CoreView_386]
-    test_split = [CoreView_386]
+    train_split = [CoreView_377]
+    val_split = [CoreView_377]
+    test_split = [CoreView_377]
     train_views = [0]
     test_views = [0]
-    val_views = [0]
+    val_views = [7]
     N_frames = 616
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 50
-    val_subsampling_rate = 100
+    train_end_frame = 500
+    val_subsampling_rate = 1000
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 100
+    test_subsampling_rate = 1000
     test_start_frame = 500
     test_end_frame = -1
 
@@ -36,7 +36,8 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = True
+    inner_sampling = True # False
+    use_inter_mask = True # False
     res_level = 4
     use_dilated = True
 }
@@ -47,14 +48,15 @@ train {
     num_workers = 8
 
     val_every_epoch = 2
-    log_every_step = 1 # 10
+    log_every_step = 1
 
-    save_every_epoch  = 20
+    save_every_epoch  = 10
     max_epochs = 500
     anneal_end = 50000
     warm_up_end = 5000
 
     lr = 5e-4
+    lr_pose_decoder = 5e-5
     lr_skinning_model = 1e-4
     lr_non_rigid_mlp = 5e-5
     lr_sdf_decoder_net = 1e-6
@@ -63,12 +65,15 @@ train {
     weights {
         rgb_weight = 10, # 10,
         perceptual_weight = 1, # 1,
+        mse_weight = 0.01,
+        nssim_weight = 0.01,
         eikonal_weight = 0.1, # 0.1
-        mask_weight = 0,
         skinning_weight = 1,
+        pose_refine_weight = 0,
         params_weight = 0,
-        pose_refine_weight = 1,
+        mask_weight = 0,
     }
+    weight_decay_end = 1e10,
     rgb_loss_type = l1
     view_input_noise = True
     pose_input_noise = True
@@ -83,18 +88,20 @@ model {
     sdf_mode = 1
     # [0] knn, knn for points weight, and points offset for non-rigid
     # [1] nn, skinning model to predict points weights
-    deform_mode = 0
-    N_iter_backward = 1
-    use_init_sdf = False
+    deform_mode = 1
+
+    N_iter_backward = 3
+    use_init_sdf = True
     sdf_threshold = 0.05
+
     init_weight = False
-    
-    cano_view_dirs = False
-    near_surface_samples = 16
-    far_surface_samples = 16
-    nets_path = data/pretrained/humannerf/zju_mocap/386/latest.tar
-    geo_pose_encoder = latent
-    color_pose_encoder = latent
+    nets_path = data/pretrained/humannerf/zju_mocap/377/latest.tar
+
+    # cano_view_dirs = False
+    # near_surface_samples = 16
+    # far_surface_samples = 16
+    # geo_pose_encoder = latent
+    # color_pose_encoder = latent
 
     # for skinning_model
     skinning_model {
@@ -108,14 +115,15 @@ model {
         multires = 6,
         bias = 1.0,
         geometric_init = False,
-        weight_norm = True
+        weight_norm = True,
+        kick_out_iter = 50000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 999999999999, # for pose refiner
+        kick_in_iter = 70000, # for pose refiner
     }
 
     non_rigid {
@@ -126,7 +134,7 @@ model {
         multires = 6,       # log2 of max freq for positional encoding (3D location)
         i_embed = 0,        # set 0 for default positional encoding, -1 for none
         kick_in_iter = 0,
-        full_band_iter = 250000
+        full_band_iter = 500000
     }
     
     offset_net {
