--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
@@ -56,6 +56,7 @@ train {
     warm_up_end = 5000
 
     lr = 5e-4
+    lr_pose_decoder = 5e-5
     lr_skinning_model = 1e-4
     lr_non_rigid_mlp = 5e-5
     lr_sdf_decoder_net = 1e-6
@@ -68,7 +69,7 @@ train {
         nssim_weight = 0.01,
         eikonal_weight = 0.1, # 0.1
         skinning_weight = 1,
-        pose_refine_weight = 1,
+        pose_refine_weight = 0,
         params_weight = 0,
         mask_weight = 0,
     }
@@ -89,7 +90,7 @@ model {
     # [1] nn, skinning model to predict points weights
     deform_mode = 1
 
-    N_iter_backward = 2
+    N_iter_backward = 3
     use_init_sdf = True
     sdf_threshold = 0.05
 
@@ -114,14 +115,15 @@ model {
         multires = 6,
         bias = 1.0,
         geometric_init = False,
-        weight_norm = True
+        weight_norm = True,
+        kick_out_iter = 50000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 1e10, # for pose refiner
+        kick_in_iter = 60000,
     }
 
     non_rigid {
