--- a/confs/hfavatar-zju/test.conf
+++ b/confs/hfavatar-zju/test.conf
@@ -20,11 +20,11 @@ dataset {
 
     train_subsampling_rate = 1
     train_start_frame = 0
-    train_end_frame = 50
-    val_subsampling_rate = 1000
+    train_end_frame = 500
+    val_subsampling_rate = 100
     val_start_frame = 500
     val_end_frame = -1
-    test_subsampling_rate = 1000
+    test_subsampling_rate = 100
     test_start_frame = 500
     test_end_frame = -1
 
@@ -43,7 +43,7 @@ dataset {
 }
 
 train {
-    gpus = [3]
+    gpus = [2]
     batch_size = 1
     num_workers = 8
 
@@ -56,6 +56,7 @@ train {
     warm_up_end = 5000
 
     lr = 5e-4
+    lr_pose_decoder = 5e-5
     lr_skinning_model = 1e-4
     lr_non_rigid_mlp = 5e-5
     lr_sdf_decoder_net = 1e-6
@@ -68,7 +69,7 @@ train {
         nssim_weight = 0.01,
         eikonal_weight = 0.1, # 0.1
         skinning_weight = 1,
-        pose_refine_weight = 1,
+        pose_refine_weight = 0,
         params_weight = 0,
         mask_weight = 0,
     }
@@ -114,14 +115,15 @@ model {
         multires = 6,
         bias = 1.0,
         geometric_init = False,
-        weight_norm = True
+        weight_norm = True,
+        kick_out_iter = 50000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 1e10, # for pose refiner
+        kick_in_iter = 50000, # for pose refiner
     }
 
     non_rigid {
