--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus-infer.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus-infer.conf
@@ -91,7 +91,7 @@ model {
     deform_mode = 1
 
     N_iter_backward = 3
-    use_init_sdf = False
+    use_init_sdf = True
     sdf_threshold = 0.05
 
     init_weight = False
