--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
@@ -36,7 +36,7 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = True # False
+    inner_sampling = False # False
     use_inter_mask = True # False
     res_level = 4
     use_dilated = True
@@ -91,7 +91,7 @@ model {
     deform_mode = 1
 
     N_iter_backward = 3
-    use_init_sdf = False
+    use_init_sdf = True
     sdf_threshold = 0.05
 
     init_weight = False
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 30000
+        kick_out_iter = 50000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 30000,
+        kick_in_iter = 60000,
     }
 
     non_rigid {
