--- a/environment.yaml
+++ b/environment.yaml
@@ -1,45 +1,250 @@
 name: hf-avatar
 channels:
-  - pytorch3d
-  - iopath
+  - bottler
   - pytorch
   - conda-forge
-  - defaults
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
 dependencies:
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - archspec=0.2.1=pyhd3eb1b0_0
+  - beautifulsoup4=4.12.2=py39h06a4308_0
+  - blas=1.0=mkl
+  - boltons=23.0.0=py39h06a4308_0
+  - brotli-python=1.0.9=py39h6a678d5_7
+  - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.19.1=h5eee18b_0
+  - ca-certificates=2023.11.17=hbcca054_0
+  - certifi=2023.11.17=pyhd8ed1ab_0
+  - cffi=1.16.0=py39h5eee18b_0
+  - chardet=4.0.0=py39h06a4308_1003
+  - click=8.1.7=py39h06a4308_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - conda=23.11.0=py39h06a4308_0
+  - conda-build=3.28.3=py39h06a4308_0
+  - conda-index=0.3.0=py39h06a4308_0
+  - conda-libmamba-solver=23.12.0=pyhd3eb1b0_1
+  - conda-package-handling=2.2.0=py39h06a4308_0
+  - conda-package-streaming=0.9.0=py39h06a4308_0
+  - cryptography=41.0.7=py39hdda0065_0
   - cudatoolkit=11.3.1=h2bc3f7f_2
-  - igl=2.2.1=py39h86c447d_1
-  - numpy=1.21.2=py39h20f2e39_0
-  - numpy-base=1.21.2=py39h79a1101_0
-  - pip=21.2.4=py39h06a4308_0
-  - python=3.9.7=h12debd9_1
-  - pytorch=1.10.0=py3.9_cuda11.3_cudnn8.2.0_0
-  - pytorch-lightning=1.5.10=pyhd8ed1ab_0
-  - pytorch3d=0.6.1=py39_cu113_pyt1100
-  - pyyaml=5.4.1=py39h3811e60_0
-  - torchmetrics=0.8.1=pyhd8ed1ab_0
-  - torchvision=0.11.1=py39_cu113
+  - distro=1.8.0=py39h06a4308_0
+  - ffmpeg=4.3=hf484d3e_0
+  - filelock=3.13.1=py39h06a4308_0
+  - fmt=9.1.0=hdb19cb5_0
+  - freetype=2.12.1=h4a9f257_0
+  - fvcore=0.1.5.post20221221=pyhd8ed1ab_0
+  - giflib=5.2.1=h5eee18b_3
+  - gmp=6.2.1=h295c915_3
+  - gnutls=3.6.15=he1e5248_0
+  - icu=73.1=h6a678d5_0
+  - intel-openmp=2023.1.0=hdb19cb5_46306
+  - jpeg=9e=h5eee18b_1
+  - jsonpatch=1.32=pyhd3eb1b0_0
+  - jsonpointer=2.1=pyhd3eb1b0_0
+  - jsonschema=4.19.2=py39h06a4308_0
+  - jsonschema-specifications=2023.7.1=py39h06a4308_0
+  - krb5=1.20.1=h143b758_1
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libarchive=3.6.2=h6ac8c49_2
+  - libcurl=8.5.0=h251f7ec_0
+  - libdeflate=1.17=h5eee18b_1
+  - libedit=3.1.20230828=h5eee18b_0
+  - libev=4.33=h7f8727e_1
+  - libffi=3.4.4=h6a678d5_0
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h7f8727e_2
+  - libidn2=2.3.4=h5eee18b_0
+  - liblief=0.12.3=h6a678d5_0
+  - libmamba=1.5.6=haf1ee3a_0
+  - libmambapy=1.5.6=py39h2dafd23_0
+  - libnghttp2=1.57.0=h2d74bed_0
+  - libpng=1.6.39=h5eee18b_0
+  - libsolv=0.7.24=he621ea3_0
+  - libssh2=1.10.0=hdbd6064_2
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
+  - libtiff=4.5.1=h6a678d5_0
+  - libunistring=0.9.10=h27cfd23_0
+  - libuv=1.44.2=h5eee18b_0
+  - libwebp=1.3.2=h11a3e52_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - libxml2=2.10.4=hf1b16e4_1
+  - lz4-c=1.9.4=h6a678d5_0
+  - markupsafe=2.1.3=py39h5eee18b_0
+  - menuinst=2.0.1=py39h06a4308_1
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py39h5eee18b_1
+  - mkl_fft=1.3.8=py39h5eee18b_0
+  - mkl_random=1.2.4=py39hdb19cb5_0
+  - more-itertools=10.1.0=py39h06a4308_0
+  - ncurses=6.4=h6a678d5_0
+  - nettle=3.7.3=hbbd107a_1
+  - numpy-base=1.26.3=py39hb5e798b_0
+  - nvidiacub=1.10.0=0
+  - openh264=2.1.1=h4ff587b_0
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=3.0.12=h7f8727e_0
+  - patch=2.7.6=h7b6447c_1001
+  - patchelf=0.17.2=h6a678d5_0
+  - pcre2=10.42=hebb0a14_0
+  - pillow=10.0.1=py39ha6cbd5a_0
+  - pip=23.3.1=py39h06a4308_0
+  - pkginfo=1.9.6=py39h06a4308_0
+  - platformdirs=3.10.0=py39h06a4308_0
+  - pluggy=1.0.0=py39h06a4308_1
+  - portalocker=2.8.2=py39hf3d152e_1
+  - py-lief=0.12.3=py39h6a678d5_0
+  - pybind11-abi=4=hd3eb1b0_1
+  - pycosat=0.6.6=py39h5eee18b_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopenssl=23.2.0=py39h06a4308_0
+  - pysocks=1.7.1=py39h06a4308_0
+  - python=3.9.18=h955ad1f_0
+  - python-libarchive-c=2.9=pyhd3eb1b0_1
+  - python_abi=3.9=2_cp39
+  - pytorch-mutex=1.0=cuda
+  - pytz=2023.3.post1=py39h06a4308_0
+  - readline=8.2=h5eee18b_0
+  - referencing=0.30.2=py39h06a4308_0
+  - reproc=14.2.4=h295c915_1
+  - reproc-cpp=14.2.4=h295c915_1
+  - requests=2.31.0=py39h06a4308_0
+  - rpds-py=0.10.6=py39hb02cf49_0
+  - ruamel.yaml=0.17.21=py39h5eee18b_0
+  - ruamel.yaml.clib=0.2.6=py39h5eee18b_1
+  - soupsieve=2.5=py39h06a4308_0
+  - sqlite=3.41.2=h5eee18b_0
+  - tabulate=0.9.0=pyhd8ed1ab_1
+  - tbb=2021.8.0=hdb19cb5_0
+  - termcolor=2.4.0=pyhd8ed1ab_0
+  - tk=8.6.12=h1ccaba5_0
+  - tomli=2.0.1=py39h06a4308_0
+  - tqdm=4.66.1=pyhd8ed1ab_0
+  - typing_extensions=4.7.1=py39h06a4308_0
+  - tzdata=2023d=h04d1e81_0
+  - wheel=0.41.2=py39h06a4308_0
+  - xz=5.4.5=h5eee18b_0
+  - yacs=0.1.8=pyhd8ed1ab_0
+  - yaml=0.2.5=h7f98852_2
+  - yaml-cpp=0.8.0=h6a678d5_0
+  - zlib=1.2.13=h5eee18b_0
+  - zstandard=0.19.0=py39h5eee18b_0
+  - zstd=1.5.5=hc292b87_0
   - pip:
-    - cython==0.29.23
-    - gdown==4.5.1
-    - imageio==2.13.5
-    - imageio-ffmpeg==0.4.7
-    - kornia==0.5.10
-    - lpips==0.1.4
-    - matplotlib==3.4.2
-    - opencv-python==4.5.5.62
-    - pandas==1.2.4
-    - plyfile==0.7.4
-    - scikit-image==0.18.1
-    - scikit-learn==0.24.2
-    - trimesh==3.9.20
-    - wandb==0.12.15
-    - pyhocon
-    - tqdm
-    - scipy
-    - PyMCubes
-    - matplotlib
-    - termcolor
-    - tensorboard
-    - pyrender
-    - libigl
-    - mesh2sdf
+      - absl-py==2.0.0
+      - aiohttp==3.9.1
+      - aiosignal==1.3.1
+      - appdirs==1.4.4
+      - asttokens==2.4.1
+      - async-timeout==4.0.3
+      - attrs==23.2.0
+      - cachetools==5.3.2
+      - charset-normalizer==3.3.2
+      - cmake==3.25.0
+      - contourpy==1.2.0
+      - cycler==0.12.1
+      - cython==3.0.8
+      - docker-pycreds==0.4.0
+      - executing==2.0.1
+      - fastminv==0.0.0
+      - fonttools==4.47.0
+      - freetype-py==2.4.0
+      - frozenlist==1.4.1
+      - fsspec==2023.12.2
+      - future==0.18.3
+      - gitdb==4.0.11
+      - gitpython==3.1.41
+      - google-auth==2.26.2
+      - google-auth-oauthlib==1.2.0
+      - grpcio==1.60.0
+      - h5py==3.10.0
+      - huggingface-hub==0.20.2
+      - icecream==2.1.3
+      - idna==3.6
+      - imageio==2.33.1
+      - importlib-metadata==7.0.1
+      - importlib-resources==6.1.1
+      - interplate==0.0.0
+      - iopath==0.1.10
+      - jinja2==3.1.3
+      - kiwisolver==1.4.5
+      - lazy-loader==0.3
+      - libigl==2.5.0
+      - lightning-utilities==0.10.0
+      - lit==15.0.7
+      - lpips==0.1.4
+      - markdown==3.5.2
+      - matplotlib==3.8.2
+      - mesh2sdf==1.1.0
+      - mpmath==1.3.0
+      - multidict==6.0.4
+      - networkx==3.2.1
+      - numpy==1.21.2
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu12==8.9.2.26
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu12==2.18.1
+      - nvidia-nvjitlink-cu12==12.3.101
+      - nvidia-nvtx-cu12==12.1.105
+      - oauthlib==3.2.2
+      - opencv-python==4.5.5.62
+      - packaging==23.2
+      - point-cloud-utils==0.30.4
+      - protobuf==4.23.4
+      - psutil==5.9.7
+      - pyasn1==0.5.1
+      - pyasn1-modules==0.3.0
+      - pydeprecate==0.3.1
+      - pyglet==2.0.10
+      - pygments==2.17.2
+      - pyhocon==0.3.60
+      - pymcubes==0.1.4
+      - pyopengl==3.1.0
+      - pyparsing==3.1.1
+      - pyrender==0.1.45
+      - python-dateutil==2.8.2
+      - pytorch-lightning==1.5.10
+      - pytorch3d==0.7.4
+      - pywavelets==1.4.1
+      - pyyaml==5.4.1
+      - requests-oauthlib==1.3.1
+      - rsa==4.9
+      - safetensors==0.4.1
+      - scikit-image==0.21.0
+      - scipy==1.10.1
+      - sentry-sdk==1.39.2
+      - setproctitle==1.3.3
+      - setuptools==59.5.0
+      - six==1.16.0
+      - smmap==5.0.1
+      - sympy==1.12
+      - tensorboard==2.15.1
+      - tensorboard-data-server==0.7.2
+      - tifffile==2023.12.9
+      - timm==0.9.12
+      - torch==2.0.1+cu118
+      - torchmetrics==1.2.1
+      - torchvision==0.15.2+cu118
+      - trimesh==4.0.8
+      - triton==2.0.0
+      - unknown==0.0.0
+      - urllib3==2.1.0
+      - wandb==0.16.3
+      - werkzeug==3.0.1
+      - yarl==1.9.4
+      - zipp==3.17.0
+prefix: /home/wangyubo/softwares/anaconda3/envs/hf-avatar
