--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
@@ -116,7 +116,7 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 10000
+        kick_out_iter = 100000000000000000
     }
     
     pose_refiner{
