update extract geometry

--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus.conf
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 100000000000000000
+        kick_out_iter = 50000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 60000000000000,
+        kick_in_iter = 60000,
     }
 
     non_rigid {
