--- a/confs/hfavatar-people_snapshot/PeopleSnapshot-female-3-casual-mono-4gpus.conf
+++ b/confs/hfavatar-people_snapshot/PeopleSnapshot-female-3-casual-mono-4gpus.conf
@@ -1,5 +1,5 @@
 general {
-    base_exp_dir = ./exp/male-4-casual/
+    base_exp_dir = ./exp/female-3-casual/
     recording = [./,]
     total_bones = 24
 }
@@ -10,23 +10,23 @@ dataset {
     data_dir = data/data_prepared
     use_aug = False
     normalized_scale = True
-    train_split = [male-4-casual]
-    val_split = [male-4-casual]
-    test_split = [male-4-casual]
+    train_split = [female-3-casual]
+    val_split = [female-3-casual]
+    test_split = [female-3-casual]
     train_views = [0]
     test_views = [0]
     val_views = [0]
-    N_frames = 873
+    N_frames = 648
 
     train_subsampling_rate = 1
-    train_start_frame = 50
-    train_end_frame = 350
+    train_start_frame = 0
+    train_end_frame = 445
     val_subsampling_rate = 200
-    val_start_frame = 350
+    val_start_frame = 446
     val_end_frame = -1
-    test_subsampling_rate = 200
-    test_start_frame = 350
-    test_end_frame = -1
+    test_subsampling_rate = 4
+    test_start_frame = 446
+    test_end_frame = 647
 
     box_margin = 0.05
     erode_mask = False
