--- a/confs/hfavatar-zju/ZJUMOCAP-377-4gpus-infer.conf
+++ b/confs/hfavatar-zju/ZJUMOCAP-377-4gpus-infer.conf
@@ -36,7 +36,7 @@ dataset {
     patch_size = 32
     N_patches = 4
     ray_shoot_mode = patch
-    inner_sampling = True # False
+    inner_sampling = False # False
     use_inter_mask = True # False
     res_level = 4
     use_dilated = True
@@ -116,14 +116,14 @@ model {
         bias = 1.0,
         geometric_init = False,
         weight_norm = True,
-        kick_out_iter = 30000
+        kick_out_iter = 300000000000000000000
     }
     
     pose_refiner{
         embedding_size = 69,
         mlp_width = 256,
         mlp_depth = 4,
-        kick_in_iter = 30000,
+        kick_in_iter = 300000000000000000000,
     }
 
     non_rigid {
